[refactor,documentation,style][MOD]: Update CHDs to the new format

--- a/index.less
+++ b/index.less
@@ -9,77 +9,83 @@ author    Arctic Ice Studio                  +
 email     development@arcticicestudio.com    +
 copyright Copyright (C) 2015-2016            +
 created   2015-03-15 20:17 UTC+0100          +
-modified  2016-01-27 21:42 UTC+0100          +
+modified  2016-01-31 11:10 UTC+0100          +
 ++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 A north-bluish dark theme based on the same named color palette designed by Arctic Ice Studio.
 This is a darker and more blue-tinged variation.
 
+[Index]
+  (1) Imports
+    (1.0) Core
+    (1.1) Package Support
+    (1.2) Languages
+
 [Variations]
-Also available as:
-  - "Northem Atom Syntax"         (https://github.com/arcticicestudio/northem-atom-syntax)
-  - "Northem Light Atom Syntax"   (https://github.com/arcticicestudio/northem-light-atom-syntax)
+  - "Northem Atom Syntax"       (https://github.com/arcticicestudio/northem-atom-syntax)
+  - "Northem Light Atom Syntax" (https://github.com/arcticicestudio/northem-light-atom-syntax)
 
 Make sure to check out "Northem Dark Atom UI" (https://github.com/arcticicestudio/northem-dark-atom-ui)!
 
 [Other Projects]
-  - "Northem Dark Eclipse Syntax"    (https://github.com/arcticicestudio/northem-dark-eclipse-syntax)
-  - "Northem Dark gedit"             (https://github.com/arcticicestudio/northem-dark-gedit)
-  - "Northem Dark GTK"               (in drafting)
-  - "Northem Dark Notepad++"         (https://github.com/arcticicestudio/northem-dark-notepadplusplus) (Windows only)
+  - "Northem Dark Eclipse Syntax" (https://github.com/arcticicestudio/northem-dark-eclipse-syntax)
+  - "Northem Dark gedit"          (https://github.com/arcticicestudio/northem-dark-gedit)
+  - "Northem Dark GTK"            (in drafting)
+  - "Northem Dark Notepad++"      (https://github.com/arcticicestudio/northem-dark-notepadplusplus) (Windows only)
 
 Visit the official homepage http://arcticicestudio.com/Northem (actually under construction) for more informations.
 
 [Languages]
-Syntax Highlighting actually includes:
-  - C               (https://atom.io/packages/language-c)
-  - C++             (https://atom.io/packages/language-c)
-  - Clojure         (https://atom.io/packages/language-clojure)
-  - CoffeeScript    (https://atom.io/packages/language-coffee-script)
-  - CS (C#)         (https://atom.io/packages/language-csharp)
-  - CSS             (https://atom.io/packages/language-css)
-  - D               (https://atom.io/packages/language-d)
-  - Generic Config  (https://atom.io/packages/language-generic-config)
-  - git             (https://atom.io/packages/language-git)
-  - GLSL            (https://atom.io/packages/language-glsl)
-  - diff            (https://atom.io/packages/git-diff)
-  - HAML            (https://atom.io/packages/language-haml)
-  - Haskell         (https://atom.io/packages/language-haskell)
-  - HTML            (https://atom.io/packages/language-html)
-  - Jade            (https://atom.io/packages/language-jade)
-  - Java            (https://atom.io/packages/language-java)
-  - JavaScript      (https://atom.io/packages/language-javascript)
-  - JSON            (https://atom.io/packages/language-json)
-  - LESS            (https://atom.io/packages/language-lesss)
-  - Markdown        (https://atom.io/packages/language-gfm)
-  - Mustache        (https://atom.io/packages/language-mustache)
-  - PHP             (https://atom.io/packages/language-php)
-  - PropertyList    (https://atom.io/packages/language-property-list)
-  - Python          (https://atom.io/packages/language-python)
-  - R               (https://atom.io/packages/language-r)
-  - Ruby            (https://atom.io/packages/language-ruby)
-  - SASS            (https://atom.io/packages/language-sass)
-  - XML             (https://atom.io/packages/language-xml)
-  - YAML            (https://atom.io/packages/language-yaml)
+  - C              (https://atom.io/packages/language-c)
+  - C++            (https://atom.io/packages/language-c)
+  - Clojure        (https://atom.io/packages/language-clojure)
+  - CoffeeScript   (https://atom.io/packages/language-coffee-script)
+  - CS (C#)        (https://atom.io/packages/language-csharp)
+  - CSS            (https://atom.io/packages/language-css)
+  - D              (https://atom.io/packages/language-d)
+  - Generic Config (https://atom.io/packages/language-generic-config)
+  - git            (https://atom.io/packages/language-git)
+  - GLSL           (https://atom.io/packages/language-glsl)
+  - diff           (https://atom.io/packages/git-diff)
+  - HAML           (https://atom.io/packages/language-haml)
+  - Haskell        (https://atom.io/packages/language-haskell)
+  - HTML           (https://atom.io/packages/language-html)
+  - Jade           (https://atom.io/packages/language-jade)
+  - Java           (https://atom.io/packages/language-java)
+  - JavaScript     (https://atom.io/packages/language-javascript)
+  - JSON           (https://atom.io/packages/language-json)
+  - LESS           (https://atom.io/packages/language-lesss)
+  - Markdown       (https://atom.io/packages/language-gfm)
+  - Mustache       (https://atom.io/packages/language-mustache)
+  - PHP            (https://atom.io/packages/language-php)
+  - PropertyList   (https://atom.io/packages/language-property-list)
+  - Python         (https://atom.io/packages/language-python)
+  - R              (https://atom.io/packages/language-r)
+  - Ruby           (https://atom.io/packages/language-ruby)
+  - SASS           (https://atom.io/packages/language-sass)
+  - Shell          (https://atom.io/packages/language-shellscript)
+  - SQL            (https://atom.io/packages/language-sql)
+  - XML            (https://atom.io/packages/language-xml)
+  - YAML           (https://atom.io/packages/language-yaml)
 
 [Packages]
-Actually supporting:
-  - bracket-matcher@^0.76.0            (https://atom.io/packages/bracket-matcher)
-  - color-picker@^2.0.12               (https://atom.io/packages/color-picker)
-  - hightlight-selected@^0.10.1        (https://atom.io/packages/highlight-selected)
-  - markdown-preview@^0.150.0          (https://atom.io/packages/markdown-preview)
-  - minimap-highlight-selected@^4.3.1  (https://atom.io/packages/minimap-highlight-selected)
+  - bracket-matcher@^0.79.0           (https://atom.io/packages/bracket-matcher)
+  - color-picker@^2.1.1               (https://atom.io/packages/color-picker)
+  - highlight-selected@^0.11.1        (https://atom.io/packages/highlight-selected)
+  - markdown-preview@^0.157.0         (https://atom.io/packages/markdown-preview)
+  - minimap-highlight-selected@^4.3.1 (https://atom.io/packages/minimap-highlight-selected)
 
 [Version]
 0.13.0 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
-status: ìndev
 
-For older versions check out the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax) and http://arcticicestudio.com/Northem (actually under construction).
+For older versions check out the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax)
+and http://arcticicestudio.com/Northem (actually under construction).
 
 [Changelog]
 Check out the "CHANGELOG.md" file or open via "Settings" > "Packages" and filter for "northem-dark-atom-syntax".
-All changelogs are available at the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax) and http://arcticicestudio.com/Northem (actually under construction).
+All changelogs are available at the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax)
+and http://arcticicestudio.com/Northem (actually under construction).
 
 [Development]
 Please report bugs and suggestions for improvement/language support at https://github.com/arcticicestudio/northem-dark-atom-syntax/issues.
@@ -102,40 +108,52 @@ Alternatively open "Settings" > "Install", set the filter to "Themes" and search
 
 Activate it by going to the "Settings" > "Themes" section and select "Northem Dark" from the "Syntax Theme" drop-down menu.
 
-[License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
+[License]
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
 
-[References]
-API-Documentation   (https://atom.io/docs/api/v0.188.0/Atom)
-Atom Flight Manual  (https://atom.io/docs)
-LESS                (http://lesscss.org)
-*/
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
 
-/*
- * ========
- * = CORE =
- * ========
- */
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+API-Documentation  (https://atom.io/docs/api/v0.188.0/Atom)
+Atom Flight Manual (https://atom.io/docs)
+LESSCSS            (http://lesscss.org)
+*/
+/* +----------------------------------------------------------------------------+
+   + Imports                                                                [1] +
+   +----------------------------------------------------------------------------+ */
+/* +----------------------------------------------------------------------------+
+   + Imports - Core                                                       [1.0] +
+   +----------------------------------------------------------------------------+ */
 @import (reference) "styles/northem-dark.less";
 @import (reference) "styles/colors.less";
 @import (reference) "styles/sizes.less";
 @import "./styles/editor.less";
+/* +----------------------------------------------------------------------[1.0]-+ */
 
-/*
- * ==================
- * = PACKAGESUPPORT =
- * ==================
- */
+/* +----------------------------------------------------------------------------+
+   + Imports - Package Support                                            [1.1] +
+   +----------------------------------------------------------------------------+ */
 @import "./styles/packagesupport.less";
+/* +----------------------------------------------------------------------[1.1]-+ */
 
-/*
- * =============
- * = LANGUAGES =
- * =============
- */
+/* +----------------------------------------------------------------------------+
+   + Imports - Languages                                                  [1.2] +
+   +----------------------------------------------------------------------------+ */
 @import "./styles/languages/C.less";
 @import "./styles/languages/Clojure.less";
 @import "./styles/languages/CoffeeScript.less";
@@ -167,10 +185,5 @@ LESS                (http://lesscss.org)
 @import "./styles/languages/SQL.less";
 @import "./styles/languages/XML.less";
 @import "./styles/languages/YAML.less";
-
-/*
- * =============
- * = FALLBACKS =
- * =============
- */
-//@import "./styles/fallback.less";
+/* +----------------------------------------------------------------------[1.2]-+ */
+/* +------------------------------------------------------------------------[1]-+ */
