--- a/styles/languages/CPP.less
+++ b/styles/languages/CPP.less
@@ -9,27 +9,26 @@ email     development@arcticicestudio.com         +
 website   http://arcticicestudio.com              +
 copyright Copyright (C) 2015-2016                 +
 created   2016-01-24 16:45 UTC+0100               +
-modified  2016-01-24 16:46 UTC+0100               +
+modified  2016-01-31 11:29 UTC+0100               +
 +++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for C++.
 
 [Index]
-  (1) Meta
-  (2) Keyword
+  (1) Comment
+  (2) Constant
   (3) Entity
-  (4) Support
-  (5) Variable
-  (6) Storage
-  (7) Constant
-  (8) punctuation
-  (9) Comment
-  (10) String
+  (4) Keyword
+  (5) Meta
+  (6) Punctuation
+  (7) Support
+  (8) Storage
+  (9) String
+  (10) Variable
 
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  - language-c@0.47.0 (https://atom.io/packages/language-c) by "atom" (https://atom.io/users/atom)
+  - language-c@^0.51.1 (https://atom.io/packages/language-c) by "atom" (https://atom.io/users/atom)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -64,30 +63,49 @@ LESSCSS
 .source.cpp {
   color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
-     + Meta                                                                   [1] +
+     + Comment                                                                [1] +
      +----------------------------------------------------------------------------+ */
-    .meta {
-      &.preprocessor {
-        &.macro {
-          color: @color-syntax-other;
-        }
-        &.c {
-          &.include {
-            color: @color-syntax-keyword;
-          }
-        }
-      }
-      &.block {
-        color: @color-syntax-other;
-      }
-      &.parens {
-        color: @color-syntax-other;
-      }
-    }
+  .comment {
+    color: @color-syntax-comment;
+  }
   /* +------------------------------------------------------------------------[1]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Keyword                                                                [2] +
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
+  .constant {
+    &.numeric {
+      color: @color-syntax-number;
+    }
+    &.character {
+      &.escape {
+        color: @color-syntax-escape;
+      }
+    }
+    &.language {
+      color: @color-syntax-keyword;
+    }
+  }
+  /* +------------------------------------------------------------------------[2]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [3] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
+    &.name {
+      &.function {
+        color: @color-syntax-function;
+      }
+      &.type {
+        color: @color-syntax-class;
+        font-weight: bold;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [4] +
      +----------------------------------------------------------------------------+ */
   .keyword {
     &.control {
@@ -110,95 +128,33 @@ LESSCSS
       }
     }
   }
-  /* +------------------------------------------------------------------------[2]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Entity                                                                 [3] +
-     +----------------------------------------------------------------------------+ */
-  .entity {
-    &.name {
-      &.function {
-        color: @color-syntax-function;
-      }
-      &.type {
-        color: @color-syntax-class;
-        font-weight: bold;
-      }
-    }
-  }
-  /* +------------------------------------------------------------------------[3]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Support                                                                [4] +
-     +----------------------------------------------------------------------------+ */
-  .support {
-    &.type {
-      &.sys-types {
-        color: @color-syntax-class;
-      }
-      &.stdint {
-        color: @color-syntax-class;
-      }
-    }
-    &.function {
-      &.any-method {
-        color: @color-syntax-function;
-      }
-      &.C99 {
-        color: @color-syntax-function;
-      }
-    }
-  }
   /* +------------------------------------------------------------------------[4]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Variable                                                               [5] +
+     + Meta                                                                   [5] +
      +----------------------------------------------------------------------------+ */
-  .variable {
-    &.parameter {
-      color: @color-syntax-variable;
-    }
-    &.other {
-      &.dot-access {
-        color: @color-syntax-class;
+    .meta {
+      &.preprocessor {
+        &.macro {
+          color: @color-syntax-other;
+        }
+        &.c {
+          &.include {
+            color: @color-syntax-keyword;
+          }
+        }
+      }
+      &.block {
+        color: @color-syntax-other;
+      }
+      &.parens {
+        color: @color-syntax-other;
       }
     }
-  }
   /* +------------------------------------------------------------------------[5]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Storage                                                                [6] +
-     +----------------------------------------------------------------------------+ */
-  .storage {
-    &.type {
-      color: @color-syntax-keyword;
-    }
-    &.modifier {
-      color: @color-syntax-keyword;
-    }
-  }
-  /* +------------------------------------------------------------------------[6]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Constant                                                               [7] +
-     +----------------------------------------------------------------------------+ */
-  .constant {
-    &.numeric {
-      color: @color-syntax-number;
-    }
-    &.character {
-      &.escape {
-        color: @color-syntax-escape;
-      }
-    }
-    &.language {
-      color: @color-syntax-keyword;
-    }
-  }
-  /* +------------------------------------------------------------------------[7]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Punctuation                                                            [8] +
+     + Punctuation                                                            [6] +
      +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
@@ -232,21 +188,64 @@ LESSCSS
       }
     }
   }
+  /* +------------------------------------------------------------------------[6]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Support                                                                [7] +
+     +----------------------------------------------------------------------------+ */
+  .support {
+    &.type {
+      &.sys-types {
+        color: @color-syntax-class;
+      }
+      &.stdint {
+        color: @color-syntax-class;
+      }
+    }
+    &.function {
+      &.any-method {
+        color: @color-syntax-function;
+      }
+      &.C99 {
+        color: @color-syntax-function;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[7]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Storage                                                                [8] +
+     +----------------------------------------------------------------------------+ */
+  .storage {
+    &.type {
+      color: @color-syntax-keyword;
+    }
+    &.modifier {
+      color: @color-syntax-keyword;
+    }
+  }
   /* +------------------------------------------------------------------------[8]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Comment                                                                [9] +
-     +----------------------------------------------------------------------------+ */
-  .comment {
-    color: @color-syntax-comment;
-  }
-  /* +------------------------------------------------------------------------[9]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + String                                                                [10] +
+     + String                                                                 [9] +
      +----------------------------------------------------------------------------+ */
   .string {
     color: @color-syntax-string;
   }
+  /* +------------------------------------------------------------------------[9]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Variable                                                              [10] +
+     +----------------------------------------------------------------------------+ */
+  .variable {
+    &.parameter {
+      color: @color-syntax-variable;
+    }
+    &.other {
+      &.dot-access {
+        color: @color-syntax-class;
+      }
+    }
+  }
+  /* +-----------------------------------------------------------------------[10]-+ */
 }
-/* +-----------------------------------------------------------------------[10]-+ */
