--- a/styles/languages/Haskell.less
+++ b/styles/languages/Haskell.less
@@ -3,71 +3,65 @@
 title     Northem Dark Atom Syntax - Language Haskell +
 project   northem-dark-atom-syntax                    +
 file      Haskell.less                                +
-webiste   http://arcticicestudio.com/Northem          +
+version   0.13.0                                      +
 author    Arctic Ice Studio                           +
 email     development@arcticicestudio.com             +
-copyright Copyright (C) 2015                          +
+website   http://arcticicestudio.com                  +
+copyright Copyright (C) 2015-2016                     +
 created   2015-08-01 10:18 UTC+0200                   +
-modified  2015-12-12 20:57 UTC+0100                   +
+modified  2016-01-31 16:16 UTC+0100                   +
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for Haskell.
 
+[Index]
+  (1) Comment
+  (2) Constant
+  (3) Entity
+  (4) Keyword
+  (5) Meta
+  (6) Punctuation
+  (7) Support
+  (8) Storage
+  (9) String
+
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  - "language-haskell@1.4.1" (https://atom.io/packages/language-haskell) by "atom-haskell" (https://atom.io/users/atom-haskell)
+  - language-haskell@^1.5.2 (https://atom.io/packages/language-haskell) by "atom-haskell" (https://atom.io/users/atom-haskell)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
-
 .source.haskell {
-  /*
-   * ========
-   * = META =
-   * ========
-   */
-  .meta {
-    &.preprocessor {
-      color: @color-syntax-haskell-preprocessor;
-
-      .keyword {
-        &.other {
-          color: @color-syntax-keyword;
-        }
-      }
-    }
-    &.declaration {
-      &.exports {
-        color: @color-syntax-symbol;
-      }
-    }
-    &.type-signature {
-      // TODO: Necessary to set parent color property?
-      /* color: transparent; */
-
-      .keyword {
-        &.operator {
-          color: @color-syntax-operator;
-        }
-      }
-    }
-    &.other {
-      &.constructor-list {
-        color: @color-syntax-variable;
-      }
-    }
-  }
-
-  /*
-   * ===========
-   * = COMMENT =
-   * ===========
-   */
+  color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
   .comment {
     color: @color-syntax-comment;
     font-weight: normal;
@@ -78,39 +72,21 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[1]-+ */
 
-  /*
-   * ===========
-   * = SUPPORT =
-   * ===========
-   */
-  .support {
-    &.other {
-      &.module {
-        color: @color-syntax-class;
-        font-weight: bold;
-      }
-    }
-    &.class {
-      &.prelude {
-        color: @color-syntax-class;
-      }
-    }
-    &.function {
-      &.prelude {
-        color: @color-syntax-function;
-      }
-    }
-    &.tag {
-      color: @color-syntax-keyword;
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
+  .constant {
+    &.numeric {
+      color: @color-syntax-number;
     }
   }
+  /* +------------------------------------------------------------------------[2]-+ */
 
-  /*
-   * ==========
-   * = ENTITY =
-   * ==========
-   */
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [3] +
+     +----------------------------------------------------------------------------+ */
   .entity {
     &.name {
       &.type {
@@ -128,12 +104,11 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[3]-+ */
 
-  /*
-   * ===========
-   * = KEYWORD =
-   * ===========
-   */
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [4] +
+     +----------------------------------------------------------------------------+ */
   .keyword {
     &.operator {
       color: @color-syntax-operator;
@@ -165,25 +140,47 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[4]-+ */
 
-  /*
-   * ===========
-   * = STORAGE =
-   * ===========
-   */
-  .storage {
-    &.type {
-      &.data {
-        color: @color-syntax-keyword;
+  /* +----------------------------------------------------------------------------+
+     + Meta                                                                   [5] +
+     +----------------------------------------------------------------------------+ */
+  .meta {
+    &.preprocessor {
+      color: @color-syntax-haskell-preprocessor;
+
+      .keyword {
+        &.other {
+          color: @color-syntax-keyword;
+        }
+      }
+    }
+    &.declaration {
+      &.exports {
+        color: @color-syntax-symbol;
+      }
+    }
+    &.type-signature {
+      // TODO: Necessary to set parent color property?
+      /* color: transparent; */
+
+      .keyword {
+        &.operator {
+          color: @color-syntax-operator;
+        }
+      }
+    }
+    &.other {
+      &.constructor-list {
+        color: @color-syntax-variable;
       }
     }
   }
+  /* +------------------------------------------------------------------------[5]-+ */
 
-  /*
-   * ===============
-   * = PUNCTUATION =
-   * ===============
-   */
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [6] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
     &.separator {
       &.comma {
@@ -201,23 +198,49 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[6]-+ */
 
-  /*
-   * ============
-   * = CONSTANT =
-   * ============
-   */
-  .constant {
-    &.numeric {
-      color: @color-syntax-number;
+  /* +----------------------------------------------------------------------------+
+     + Support                                                                [7] +
+     +----------------------------------------------------------------------------+ */
+  .support {
+    &.other {
+      &.module {
+        color: @color-syntax-class;
+        font-weight: bold;
+      }
+    }
+    &.class {
+      &.prelude {
+        color: @color-syntax-class;
+      }
+    }
+    &.function {
+      &.prelude {
+        color: @color-syntax-function;
+      }
+    }
+    &.tag {
+      color: @color-syntax-keyword;
     }
   }
+  /* +------------------------------------------------------------------------[7]-+ */
 
-  /*
-   * ==========
-   * = STRING =
-   * ==========
-   */
+  /* +----------------------------------------------------------------------------+
+     + Storage                                                                [8] +
+     +----------------------------------------------------------------------------+ */
+  .storage {
+    &.type {
+      &.data {
+        color: @color-syntax-keyword;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[8]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [9] +
+     +----------------------------------------------------------------------------+ */
   .string {
     &.quoted {
       &.single {
@@ -225,4 +248,5 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[9]-+ */
 }
