--- a/styles/languages/CS.less
+++ b/styles/languages/CS.less
@@ -1,37 +1,147 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Language CS (C#) +
-project   northem-dark-atom-syntax                    +
-file      CS.less                                     +
-webiste   http://arcticicestudio.com/Northem          +
-author    Arctic Ice Studio                           +
-email     development@arcticicestudio.com             +
-copyright Copyright (C) 2015                          +
-created   2015-08-28 11:42 UTC+0200                   +
-modified  2015-12-12 20:53 UTC+0100                   +
-+++++++++++++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language C# (CSharp) +
+project   northem-dark-atom-syntax                        +
+file      CS.less                                         +
+version   0.13.0                                          +
+author    Arctic Ice Studio                               +
+email     development@arcticicestudio.com                 +
+website   http://arcticicestudio.com                      +
+copyright Copyright (C) 2015-2016                         +
+created   2015-08-28 11:42 UTC+0200                       +
+modified  2016-01-31 11:32 UTC+0100                       +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines all language specific syntax highlighting classes for CS (C#).
+This file defines all language specific syntax highlighting classes for C# (CSharp).
+
+[Index]
+  (1) Comment
+  (2) Constant
+  (3) Entity
+  (4) Keyword
+  (5) Meta
+  (6) Punctuation
+  (7) Storage
+  (8) String
+  (9) Variable
 
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  - language-csharp@0.17.0 (https://atom.io/packages/language-csharp) by "atom" (https://atom.io/users/atom)
+  - language-csharp@^0.11.0 (https://atom.io/packages/language-csharp) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
 .source.cs {
   color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
+  .comment {
+    color: @color-syntax-comment;
+  }
+  /* +------------------------------------------------------------------------[1]-+ */
 
-  /*
-   * ========
-   * = META =
-   * ========
-   */
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
+  .constant {
+    &.language {
+      color: @color-syntax-keyword;
+    }
+    &.numeric {
+      color: @color-syntax-number;
+    }
+    &.character {
+      &.escape {
+        color: @color-syntax-escape;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[2]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [3] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
+    &.name {
+      &.type {
+        &.class {
+          color: @color-syntax-class;
+          font-weight: bold;
+        }
+      }
+      &.function {
+        color: @color-syntax-function;
+      }
+      &.tag {
+        &.localname {
+          color: @color-syntax-cs-comment-tag;
+          font-style: italic;
+        }
+      }
+    }
+    &.other {
+      &.attribute-name {
+        &.localname {
+          color: @color-syntax-class;
+          font-style: italic;
+        }
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [4] +
+     +----------------------------------------------------------------------------+ */
+  .keyword {
+    &.operator {
+      color: @color-syntax-keyword;
+    }
+    &.other {
+      &.namespace {
+        color: @color-syntax-cs-preprocessor;
+        font-weight: bold;
+      }
+    }
+    &.control {
+      color: @color-syntax-keyword;
+    }
+    &.other {
+      color: @color-syntax-keyword;
+    }
+  }
+  /* +------------------------------------------------------------------------[4]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Meta                                                                   [5] +
+     +----------------------------------------------------------------------------+ */
   .meta {
     &.method {
       color: @color-syntax-function;
@@ -64,119 +174,11 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[5]-+ */
 
-  /*
-   * ===========
-   * = KEYWORD =
-   * ===========
-   */
-  .keyword {
-    &.operator {
-      color: @color-syntax-keyword;
-    }
-    &.other {
-      &.namespace {
-        color: @color-syntax-cs-preprocessor;
-        font-weight: bold;
-      }
-    }
-    &.control {
-      color: @color-syntax-keyword;
-    }
-    &.other {
-      color: @color-syntax-keyword;
-    }
-  }
-
-  /*
-   * ==========
-   * = ENTITY =
-   * ==========
-   */
-  .entity {
-    &.name {
-      &.type {
-        &.class {
-          color: @color-syntax-class;
-          font-weight: bold;
-        }
-      }
-      &.function {
-        color: @color-syntax-function;
-      }
-      &.tag {
-        &.localname {
-          color: @color-syntax-cs-comment-tag;
-          font-style: italic;
-        }
-      }
-    }
-    &.other {
-      &.attribute-name {
-        &.localname {
-          color: @color-syntax-class;
-          font-style: italic;
-        }
-      }
-    }
-  }
-
-  /*
-   * ===========
-   * = STORAGE =
-   * ===========
-   */
-  .storage {
-    &.modifier {
-      color: @color-syntax-keyword;
-    }
-    &.type {
-      color: @color-syntax-class;
-
-      &.generic {
-        color: @color-syntax-class;
-        font-weight: bold;
-      }
-    }
-  }
-
-  /*
-   * ============
-   * = VARIABLE =
-   * ============
-   */
-  .variable {
-    &.parameter {
-      &.function {
-        color: @color-syntax-variable;
-      }
-    }
-  }
-
-  /*
-   * ============
-   * = CONSTANT =
-   * ============
-   */
-  .constant {
-    &.language {
-      color: @color-syntax-keyword;
-    }
-    &.numeric {
-      color: @color-syntax-number;
-    }
-    &.character {
-      &.escape {
-        color: @color-syntax-escape;
-      }
-    }
-  }
-
-  /*
-   * ===============
-   * = PUNCTUATION =
-   * ===============
-   */
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [6] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
       &.comment {
@@ -225,22 +227,43 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[6]-+ */
 
-  /*
-   * ===========
-   * = COMMENT =
-   * ===========
-   */
-  .comment {
-    color: @color-syntax-comment;
+  /* +----------------------------------------------------------------------------+
+     + Storage                                                                [7] +
+     +----------------------------------------------------------------------------+ */
+  .storage {
+    &.modifier {
+      color: @color-syntax-keyword;
+    }
+    &.type {
+      color: @color-syntax-class;
+
+      &.generic {
+        color: @color-syntax-class;
+        font-weight: bold;
+      }
+    }
   }
+  /* +------------------------------------------------------------------------[7]-+ */
 
-  /*
-   * ==========
-   * = STRING =
-   * ==========
-   */
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [8] +
+     +----------------------------------------------------------------------------+ */
   .string {
     color: @color-syntax-string;
   }
+  /* +------------------------------------------------------------------------[8]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Variable                                                              [9] +
+     +----------------------------------------------------------------------------+ */
+  .variable {
+    &.parameter {
+      &.function {
+        color: @color-syntax-variable;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[9]-+ */
 }
