--- a/styles/languages/Clojure.less
+++ b/styles/languages/Clojure.less
@@ -3,87 +3,72 @@
 title     Northem Dark Atom Syntax - Language Clojure +
 project   northem-dark-atom-syntax                    +
 file      Clojure.less                                +
-webiste   http://arcticicestudio.com/Northem          +
+version   0.13.0                                      +
 author    Arctic Ice Studio                           +
 email     development@arcticicestudio.com             +
-copyright Copyright (C) 2015                          +
-created   2015-08-28 12:07 UTC+0100                   +
-modified  2015-12-12 20:52 UTC+0100                   +
+website   http://arcticicestudio.com                  +
+copyright Copyright (C) 2015-2016                     +
+created   2015-08-28 12:07 UTC+0200                   +
+modified  2016-01-31 11:22 UTC+0100                   +
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for Clojure.
 
+[Index]
+  (1) Comment
+  (2) Constant
+  (3) Entity
+  (4) Keyword
+  (5) Meta
+  (6) Punctuation
+  (7) Storage
+  (8) String
+
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  - language-clojure@0.16.0 (https://atom.io/packages/language-clojure) by "atom" (https://atom.io/users/atom)
+  - language-clojure@^0.19.0 (https://atom.io/packages/language-clojure) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
 .source.clojure {
   color: @color-syntax-other;
-
-  /*
-   * ========
-   * = META =
-   * ========
-   */
-  .meta {
-    &.symbol {
-      color: @color-syntax-class;
-    }
-    &.vector {
-      color: @color-syntax-symbol;
-    }
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
+  .comment {
+    color: @color-syntax-comment;
   }
+  /* +------------------------------------------------------------------------[1]-+ */
 
-  /*
-   * ===========
-   * = KEYWORD =
-   * ===========
-   */
-  .keyword {
-    &.control {
-      color: @color-syntax-keyword;
-    }
-  }
-
-  /*
-   * ===========
-   * = STORAGE =
-   * ===========
-   */
-  .storage {
-    &.control {
-      color: @color-syntax-keyword;
-    }
-  }
-
-  /*
-   * ==========
-   * = ENTITY =
-   * ==========
-   */
-  .entity {
-    &.name {
-      &.function {
-        color: @color-syntax-function;
-      }
-    }
-    &.global {
-      color: @color-syntax-class;
-    }
-  }
-
-  /*
-   * ============
-   * = CONSTANT =
-   * ============
-   */
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
   .constant {
     &.keyword {
       color: @color-syntax-keyword;
@@ -95,12 +80,49 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       color: @color-syntax-number;
     }
   }
+  /* +------------------------------------------------------------------------[2]-+ */
 
-  /*
-   * ===============
-   * = PUNCTUATION =
-   * ===============
-   */
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [3] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
+    &.name {
+      &.function {
+        color: @color-syntax-function;
+      }
+    }
+    &.global {
+      color: @color-syntax-class;
+    }
+  }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [4] +
+     +----------------------------------------------------------------------------+ */
+  .keyword {
+    &.control {
+      color: @color-syntax-keyword;
+    }
+  }
+  /* +------------------------------------------------------------------------[4]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Meta                                                                   [5] +
+     +----------------------------------------------------------------------------+ */
+  .meta {
+    &.symbol {
+      color: @color-syntax-class;
+    }
+    &.vector {
+      color: @color-syntax-symbol;
+    }
+  }
+  /* +------------------------------------------------------------------------[5]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [6] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
       &.string {
@@ -117,22 +139,23 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[6]-+ */
 
-  /*
-   * ===========
-   * = COMMENT =
-   * ===========
-   */
-  .comment {
-    color: @color-syntax-comment;
+  /* +----------------------------------------------------------------------------+
+     + Storage                                                                [7] +
+     +----------------------------------------------------------------------------+ */
+  .storage {
+    &.control {
+      color: @color-syntax-keyword;
+    }
   }
+  /* +------------------------------------------------------------------------[7]-+ */
 
-  /*
-   * ==========
-   * = STRING =
-   * ==========
-   */
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [8] +
+     +----------------------------------------------------------------------------+ */
   .string {
     color: @color-syntax-string;
   }
+  /* +------------------------------------------------------------------------[8]-+ */
 }
