--- a/styles/languages/GLSL.less
+++ b/styles/languages/GLSL.less
@@ -3,30 +3,72 @@
 title     Northem Dark Atom Syntax - Language GLSL +
 project   northem-dark-atom-syntax                 +
 file      GLSL.less                                +
-webiste   http://arcticicestudio.com/Northem       +
+version   0.13.0                                   +
 author    Arctic Ice Studio                        +
 email     development@arcticicestudio.com          +
-copyright Copyright (C) 2015                       +
+website   http://arcticicestudio.com               +
+copyright Copyright (C) 2015-2016                  +
 created   2015-08-14 15:12 UTC+0200                +
-modified  2015-12-12 20:56 UTC+0100                +
+modified  2016-01-31 11:46 UTC+0100                +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for GLSL.
 
+[Index]
+  (1) Comment
+  (2) Constant
+  (3) Entity
+  (4) Keyword
+  (5) Meta
+  (6) Punctuation
+  (7) Support
+  (8) Storage
+
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  - "language-glsl" (https://atom.io/packages/language-glsl) by "hughsk " (https://atom.io/users/hughsk)
+  - language-glsl@^2.0.1 (https://atom.io/packages/language-glsl) by "hughsk " (https://atom.io/users/hughsk)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
 .source.glsl {
   color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
+  .comment {
+    color: @color-syntax-comment;
+  }
+  /* +------------------------------------------------------------------------[1]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
   .constant {
     &.numeric {
       color: @color-syntax-number;
@@ -36,34 +78,11 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       color: @color-syntax-keyword;
     }
   }
+  /* +------------------------------------------------------------------------[2]-+ */
 
-  .keyword {
-    &.control {
-      &.import {
-        color: @color-syntax-import;
-        font-weight: bold;
-      }
-    }
-    &.operator {
-      color: @color-syntax-operator;
-    }
-  }
-
-  .support {
-    &.function {
-      color: @color-syntax-function;
-    }
-  }
-
-  .storage {
-    &.modifier {
-      color: @color-syntax-keyword;
-    }
-    &.type {
-      color: @color-syntax-class;
-    }
-  }
-
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [3] +
+     +----------------------------------------------------------------------------+ */
   .entity {
     &.name {
       &.function {
@@ -77,7 +96,39 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[3]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [4] +
+     +----------------------------------------------------------------------------+ */
+  .keyword {
+    &.control {
+      &.import {
+        color: @color-syntax-import;
+        font-weight: bold;
+      }
+    }
+    &.operator {
+      color: @color-syntax-operator;
+    }
+  }
+  /* +------------------------------------------------------------------------[4]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Meta                                                                   [5] +
+     +----------------------------------------------------------------------------+ */
+  .meta {
+    &.preprocessor {
+      /*color: @color-syntax-glsl-preprocessor;*/
+      color: @color-syntax-constant;
+      font-weight: bold;
+    }
+  }
+  /* +------------------------------------------------------------------------[5]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [6] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
       &.parameters {
@@ -88,16 +139,28 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       color: @color-syntax-symbol;
     }
   }
+  /* +------------------------------------------------------------------------[6]-+ */
 
-  .meta {
-    &.preprocessor {
-      /*color: @color-syntax-glsl-preprocessor;*/
-      color: @color-syntax-constant;
-      font-weight: bold;
+  /* +----------------------------------------------------------------------------+
+     + Support                                                                [7] +
+     +----------------------------------------------------------------------------+ */
+  .support {
+    &.function {
+      color: @color-syntax-function;
     }
   }
+  /* +------------------------------------------------------------------------[7]-+ */
 
-  .comment {
-    color: @color-syntax-comment;
+  /* +----------------------------------------------------------------------------+
+     + Storage                                                                [8] +
+     +----------------------------------------------------------------------------+ */
+  .storage {
+    &.modifier {
+      color: @color-syntax-keyword;
+    }
+    &.type {
+      color: @color-syntax-class;
+    }
   }
+  /* +------------------------------------------------------------------------[8]-+ */
 }
