--- a/styles/languages/GenericConfig.less
+++ b/styles/languages/GenericConfig.less
@@ -3,64 +3,75 @@
 title     Northem Dark Atom Syntax - Language Generic Config (dotfiles) +
 project   northem-dark-atom-syntax                                      +
 file      GenericConfig.less                                            +
-webiste   http://arcticicestudio.com/Northem                            +
+version   0.13.0                                                        +
 author    Arctic Ice Studio                                             +
 email     development@arcticicestudio.com                               +
-copyright Copyright (C) 2015                                            +
+website   http://arcticicestudio.com                                    +
+copyright Copyright (C) 2015-2016                                       +
 created   2015-09-23 12:19 UTC+0200                                     +
-modified  2015-12-12 20:54 UTC+0100                                     +
+modified  2016-01-31 11:41 UTC+0100                                     +
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines basic syntax highlighting for configuration files (dotfiles) containing comments and/or non-comments
-without a particular structure like
-  * .gitignore
-  * .gitconfig
-  * .env
-and so on.
+This file defines basic syntax highlighting classes for configuration files (dotfiles) containing
+comments and/or non-comments  without a particular structure like
+  - ".gitignore"
+  - ".gitconfig"
+  - ".env"
 
 Supported comment symbols are based on the package this theme depends on.
-Actually highlights lines that begin with a "#" or ";".
+Actually highlights lines that begin with a '#' or ';'.
 
 [Index]
-  (1.0) Default / Fallback Color
-  (2.0) Punctuation
-  (3.0) Comment
+  (1) Comment
+  (2) Punctuation
 
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  - "language-generic-config" (https://atom.io/packages/language-generic-config) by "lee-dohm " (https://atom.io/users/lee-dohm)
+  - language-generic-config@1.2.3 (https://atom.io/packages/language-generic-config) by "lee-dohm " (https://atom.io/users/lee-dohm)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
 .text.generic-config {
-/*+----------------------------------------------------------------------------+
-  + Default / Fallback Color                                             [1.0] +
-  +----------------------------------------------------------------------------+*/
   color: @color-syntax-other;
-/*+----------------------------------------------------------------------[1.0]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Punctuation                                                          [2.0] +
-  +----------------------------------------------------------------------------+*/
-  .punctuation {
-    &.definition {
-      &.comment {
-        color: @color-syntax-comment;
-      }
-    }
-  }
-/*+----------------------------------------------------------------------[2.0]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Comment                                                              [3.0] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
   .comment {
     color: @color-syntax-comment;
   }
-/*+----------------------------------------------------------------------[2.0]-+*/
+  /* +------------------------------------------------------------------------[1]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [2] +
+     +----------------------------------------------------------------------------+ */
+  .punctuation.definition.comment {
+    color: @color-syntax-comment;
+  }
+  /* +------------------------------------------------------------------------[2]-+ */
 }
