--- a/styles/languages/HTML.less
+++ b/styles/languages/HTML.less
@@ -1,17 +1,75 @@
-.html {
+/*
+++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language HTML +
+project   northem-dark-atom-syntax                 +
+file      HTML.less                                +
+version   0.13.0                                   +
+author    Arctic Ice Studio                        +
+email     development@arcticicestudio.com          +
+website   http://arcticicestudio.com               +
+copyright Copyright (C) 2015-2016                  +
+created   2015-03-15 20:17 UTC+0100                +
+modified  2016-01-31 16:21 UTC+0100                +
+++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-  .meta.tag.any {
-    color: @color-syntax-keyword;
+[Description]
+This file defines all language specific syntax highlighting classes for HTML.
+
+[Index]
+  (1) Comment
+  (2) Constant
+  (3) Entity
+  (4) Meta
+  (5) Punctuation
+  (6) Separator
+  (7) String
+
+[Dependencies]
+  - language-html@^0.43.1 (https://atom.io/packages/language-html) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
+
+[License]
+Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
+Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
+*/
+.text.html.basic {
+  color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
+  .comment {
+    &.block {
+      color: @color-syntax-comment;
+    }
   }
+  /* +------------------------------------------------------------------------[1]-+ */
 
-  .meta.tag.sgml.doctype {
-    color: @color-syntax-doctype;
-  }
-
-  .meta.toc-list.id {
-    color: @color-syntax-string;
-  }
-
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
   .constant {
     &.other {
       &.inline-data {
@@ -20,8 +78,12 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[2]-+ */
 
-  .entity{
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [3] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
     &.name.tag {
       &.structure, &.script, &.style {
         color: @color-syntax-html-tag;
@@ -36,8 +98,28 @@
       color: @color-syntax-function;
     }
   }
+  /* +------------------------------------------------------------------------[3]-+ */
 
-  .punctuation{
+  /* +----------------------------------------------------------------------------+
+     + Meta                                                                   [4] +
+     +----------------------------------------------------------------------------+ */
+  .meta.tag.any {
+    color: @color-syntax-keyword;
+  }
+
+  .meta.tag.sgml.doctype {
+    color: @color-syntax-doctype;
+  }
+
+  .meta.toc-list.id {
+    color: @color-syntax-string;
+  }
+  /* +------------------------------------------------------------------------[4]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [5] +
+     +----------------------------------------------------------------------------+ */
+  .punctuation {
     &.separator.key-value {
       color: @color-syntax-symbol;
     }
@@ -57,10 +139,19 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[5]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Separator                                                              [6] +
+     +----------------------------------------------------------------------------+ */
   .separator.key-value.html {
     color: @color-syntax-symbol;
   }
+  /* +------------------------------------------------------------------------[6]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [7] +
+     +----------------------------------------------------------------------------+ */
   .string {
     color: @color-syntax-string;
 
@@ -81,10 +172,5 @@
       }
     }
   }
-
-  .comment {
-    &.block {
-      color: @color-syntax-comment;
-    }
-  }
+  /* +------------------------------------------------------------------------[7]-+ */
 }
