--- a/styles/languages/Java.less
+++ b/styles/languages/Java.less
@@ -3,34 +3,105 @@
 title     Northem Dark Atom Syntax - Language Java +
 project   northem-dark-atom-syntax                 +
 file      Java.less                                +
-webiste   http://arcticicestudio.com/Northem       +
+version   0.13.0                                   +
 author    Arctic Ice Studio                        +
 email     development@arcticicestudio.com          +
-copyright Copyright (C) 2015                       +
+website   http://arcticicestudio.com               +
+copyright Copyright (C) 2015-2016                  +
 created   2015-08-08 11:14 UTC+0200                +
-modified  2015-12-12 20:58 UTC+0100                +
+modified  2016-01-31 16:30 UTC+0100                +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for Java.
 
+[Index]
+  (1) Comment
+  (2) Constant
+  (3) Entity
+  (4) Keyword
+  (5) Meta
+  (6) Punctuation
+  (7) Storage
+  (8) String
+  (9) Variable
+
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  - "language-java" (https://atom.io/packages/language-java) by "atom" (https://atom.io/users/atom)
+  - language-java@^0.17.0 (https://atom.io/packages/language-java) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
+Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
+Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
 
-Northem Dark code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
-Northem Dark color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
-
 .source.java {
-
+  color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
   .comment {
     color: @color-syntax-comment;
   }
+  /* +------------------------------------------------------------------------[1]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
+  .constant {
+    &.variable,
+    &.other {
+      color: @color-syntax-constant;
+      font-weight: bold;
+      font-style: italic;
+    }
+    &.numeric {
+      color: @color-syntax-number;
+    }
+  }
+  /* +------------------------------------------------------------------------[2]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [3] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
+    &.name {
+      &.function {
+        color: @color-syntax-function;
+      }
+      &.class {
+        color: @color-syntax-class;
+        font-weight: bold;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [4] +
+     +----------------------------------------------------------------------------+ */
   .keyword {
     &.other {
       &.package,
@@ -46,7 +117,46 @@ Northem Dark color palette itself is licensed under "CC BY-NC-SA 4.0" (http://cr
       color: @color-syntax-keyword;
     }
   }
+  /* +------------------------------------------------------------------------[4]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Meta                                                                   [5] +
+     +----------------------------------------------------------------------------+ */
+  .meta {
+    &.method-call {
+      .meta {
+        &.method {
+          color: @color-syntax-function;
+        }
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[5]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [6] +
+     +----------------------------------------------------------------------------+ */
+  .punctuation {
+    &.definition {
+      &.string {
+        color: @color-syntax-symbol;
+      }
+      &.method-parameters {
+        color: @color-syntax-variable;
+      }
+    }
+    &.terminator {
+      color: @color-syntax-keyword;
+    }
+    &.section {
+      color: @color-syntax-symbol;
+    }
+  }
+  /* +------------------------------------------------------------------------[6]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Storage                                                                [7] +
+     +----------------------------------------------------------------------------+ */
   .storage {
     &.modifier {
       color: @color-syntax-keyword;
@@ -64,65 +174,23 @@ Northem Dark color palette itself is licensed under "CC BY-NC-SA 4.0" (http://cr
       }
     }
   }
+  /* +------------------------------------------------------------------------[7]-+ */
 
-  .entity {
-    &.name {
-      &.function {
-        color: @color-syntax-function;
-      }
-      &.class {
-        color: @color-syntax-class;
-        font-weight: bold;
-      }
-    }
-  }
-
-  .meta {
-    &.method-call {
-      .meta {
-        &.method {
-          color: @color-syntax-function;
-        }
-      }
-    }
-  }
-
-  .constant {
-    &.variable,
-    &.other {
-      color: @color-syntax-constant;
-      font-weight: bold;
-      font-style: italic;
-    }
-    &.numeric {
-      color: @color-syntax-number;
-    }
-  }
-
-  .punctuation {
-    &.definition {
-      &.string {
-        color: @color-syntax-symbol;
-      }
-      &.method-parameters {
-        color: @color-syntax-variable;
-      }
-    }
-    &.terminator {
-      color: @color-syntax-keyword;
-    }
-    &.section {
-      color: @color-syntax-symbol;
-    }
-  }
-
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [8] +
+     +----------------------------------------------------------------------------+ */
   .string {
     color: @color-syntax-string;
   }
+  /* +------------------------------------------------------------------------[8]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Variable                                                              [9] +
+     +----------------------------------------------------------------------------+ */
   .variable {
     &.language {
       color: @color-syntax-keyword;
     }
   }
+  /* +----------------------------------------------------------------------.-[9]-+ */
 }
