--- a/styles/languages/JavaScript.less
+++ b/styles/languages/JavaScript.less
@@ -1,75 +1,76 @@
+/*
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language JavaScript +
+project   northem-dark-atom-syntax                       +
+file      JavaScript.less                                +
+version   0.13.0                                         +
+author    Arctic Ice Studio                              +
+email     development@arcticicestudio.com                +
+website   http://arcticicestudio.com                     +
+copyright Copyright (C) 2015-2016                        +
+created   2015-03-15 20:17 UTC+0100                      +
+modified  2016-01-31 16:33 UTC+0100                      +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+[Description]
+This file defines all language specific syntax highlighting classes for JavaScript.
+
+[Index]
+  (1) Comment
+  (2) Constant
+  (3) Entity
+  (4) Keyword
+  (5) Meta
+  (6) Punctuation
+  (7) Support
+  (8) Storage
+  (9) String
+  (10) Variable
+
+[Dependencies]
+  - language-javascript@^0.104.0 (https://atom.io/packages/language-javascript) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
+
+[License]
+Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
+Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
+*/
 .source.js {
-
-  .meta {
-    &.delimiter {
-      &.method {
-        &.period {
-          color: @color-syntax-symbol;
-        }
-      }
-      &.object {
-        &.comma {
-          color: @color-syntax-symbol;
-        }
-      }
-    }
-    &.brace {
-      color: @color-syntax-symbol;
-    }
+  color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
+  .comment {
+    color: @color-syntax-comment;
   }
+  /* +------------------------------------------------------------------------[1]-+ */
 
-  .keyword {
-    &.operator {
-      color: @color-syntax-operator;
-
-      &.new {
-        color: @color-syntax-keyword;
-      }
-    }
-    &.control {
-      color: @color-syntax-keyword;
-
-      &.anchor {
-        &.regexp {
-          color: @color-syntax-regexp;
-        }
-      }
-    }
-  }
-
-  .storage {
-    &.modifier {
-      color: @color-syntax-keyword;
-    }
-    &.type {
-      &.function {
-        color: @color-syntax-keyword;
-      }
-    }
-  }
-
-  .support {
-    &.function {
-      color: @color-syntax-function;
-
-      &.firebug {
-        font-style: italic;
-      }
-    }
-    &.constant {
-      color: @color-syntax-constant;
-      font-weight: normal;
-
-      &.dom {
-        color: @color-syntax-class;
-        font-style: italic;
-      }
-    }
-    &.class {
-      color: @color-syntax-class;
-    }
-  }
-
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
   .constant {
     &.numeric {
       color: @color-syntax-number;
@@ -90,7 +91,80 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[2]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [3] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
+    &.name {
+      &.type {
+        &.object {
+          color: @color-syntax-class;
+
+          &.firebug {
+            font-style: italic;
+          }
+        }
+        &.instance {
+          color: @color-syntax-javascript-instance;
+        }
+      }
+      &.function {
+        color: @color-syntax-function;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [4] +
+     +----------------------------------------------------------------------------+ */
+  .keyword {
+    &.operator {
+      color: @color-syntax-operator;
+
+      &.new {
+        color: @color-syntax-keyword;
+      }
+    }
+    &.control {
+      color: @color-syntax-keyword;
+
+      &.anchor {
+        &.regexp {
+          color: @color-syntax-regexp;
+        }
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[4]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Meta                                                                   [5] +
+     +----------------------------------------------------------------------------+ */
+  .meta {
+    &.delimiter {
+      &.method {
+        &.period {
+          color: @color-syntax-symbol;
+        }
+      }
+      &.object {
+        &.comma {
+          color: @color-syntax-symbol;
+        }
+      }
+    }
+    &.brace {
+      color: @color-syntax-symbol;
+    }
+  }
+  /* +------------------------------------------------------------------------[5]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [6] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
       &.comment {
@@ -113,33 +187,52 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[6]-+ */
 
-  .entity {
-    &.name {
-      &.type {
-        &.object {
-          color: @color-syntax-class;
+  /* +----------------------------------------------------------------------------+
+     + Support                                                                [7] +
+     +----------------------------------------------------------------------------+ */
+  .support {
+    &.function {
+      color: @color-syntax-function;
 
-          &.firebug {
-            font-style: italic;
-          }
-        }
-        &.instance {
-          color: @color-syntax-javascript-instance;
-        }
-      }
-      &.function {
-        color: @color-syntax-function;
+      &.firebug {
+        font-style: italic;
       }
     }
-  }
+    &.constant {
+      color: @color-syntax-constant;
+      font-weight: normal;
 
-  .variable {
-    &.language {
+      &.dom {
+        color: @color-syntax-class;
+        font-style: italic;
+      }
+    }
+    &.class {
+      color: @color-syntax-class;
+    }
+  }
+  /* +------------------------------------------------------------------------[7]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Storage                                                                [8] +
+     +----------------------------------------------------------------------------+ */
+  .storage {
+    &.modifier {
       color: @color-syntax-keyword;
     }
+    &.type {
+      &.function {
+        color: @color-syntax-keyword;
+      }
+    }
   }
+  /* +------------------------------------------------------------------------[8]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [9] +
+     +----------------------------------------------------------------------------+ */
   .string {
     &.quoted {
       &.single {
@@ -147,8 +240,15 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[9]-+ */
 
-  .comment {
-    color: @color-syntax-comment;
+  /* +----------------------------------------------------------------------------+
+     + Variable                                                              [10] +
+     +----------------------------------------------------------------------------+ */
+  .variable {
+    &.language {
+      color: @color-syntax-keyword;
+    }
   }
+  /* +-----------------------------------------------------------------------[10]-+ */
 }
