--- a/styles/languages/Julia.less
+++ b/styles/languages/Julia.less
@@ -1,9 +1,113 @@
-.source.julia {
+/*
++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Julia +
+project   northem-dark-atom-syntax                  +
+file      Julia.less                                +
+version   0.13.0                                    +
+author    Arctic Ice Studio                         +
+email     development@arcticicestudio.com           +
+website   http://arcticicestudio.com                +
+copyright Copyright (C) 2015-2016                   +
+created   2015-03-15 20:17 UTC+0100                 +
+modified  2016-01-31 16:41 UTC+0100                 +
++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+[Description]
+This file defines all language specific syntax highlighting classes for Julia.
+
+[Index]
+  (1) Bracket
+  (2) Comment
+  (3) Constant
+  (4) Entity
+  (5) Keyword
+  (6) Punctuation
+  (7) Support
+  (8) Storage
+  (9) String
+
+[Dependencies]
+  - language-julia@^0.5.0 (https://atom.io/packages/language-julia) by "JuliaLang" (https://atom.io/users/JuliaLang)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
+
+[License]
+Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
+Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
+*/
+.source.julia {
+  color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Bracket                                                                [1] +
+     +----------------------------------------------------------------------------+ */
+  .bracket {
+    color: @color-syntax-symbol;
+  }
+  /* +------------------------------------------------------------------------[1]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [2] +
+     +----------------------------------------------------------------------------+ */
   .comment {
     color: @color-syntax-comment;
   }
+  /* +------------------------------------------------------------------------[2]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [3] +
+     +----------------------------------------------------------------------------+ */
+  .constant {
+    &.numeric {
+      color: @color-syntax-number;
+    }
+    &.character {
+      &.escape {
+        color: @color-syntax-escape;
+      }
+    }
+    &.language {
+      color: @color-syntax-constant;
+    }
+  }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [4] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
+    &.name {
+      &.function {
+        color: @color-syntax-function;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[4]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [5] +
+     +----------------------------------------------------------------------------+ */
   .keyword {
     &.other {
       color: @color-syntax-keyword;
@@ -23,25 +127,11 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[5]-+ */
 
-  .entity {
-    &.name {
-      &.function {
-        color: @color-syntax-function;
-      }
-    }
-  }
-
-  .support {
-    &.function {
-      color: @color-syntax-function;
-
-      &.macro {
-        font-weight: bold;
-      }
-    }
-  }
-
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [6] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
       &.commment {
@@ -54,31 +144,35 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[6]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Support                                                                [7] +
+     +----------------------------------------------------------------------------+ */
+  .support {
+    &.function {
+      color: @color-syntax-function;
+
+      &.macro {
+        font-weight: bold;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[7]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Storage                                                                [8] +
+     +----------------------------------------------------------------------------+ */
   .storage {
     &.type {
       color: @color-syntax-type;
     }
   }
+  /* +------------------------------------------------------------------------[8]-+ */
 
-  .bracket {
-    color: @color-syntax-symbol;
-  }
-
-  .constant {
-    &.numeric {
-      color: @color-syntax-number;
-    }
-    &.character {
-      &.escape {
-        color: @color-syntax-escape;
-      }
-    }
-    &.language {
-      color: @color-syntax-constant;
-    }
-  }
-
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [9] +
+     +----------------------------------------------------------------------------+ */
   .string {
     &.qouted {
       &.souble {
@@ -86,4 +180,5 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[9]-+ */
 }
