--- a/styles/languages/Markdown.less
+++ b/styles/languages/Markdown.less
@@ -1,7 +1,65 @@
+/*
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language GitHub Flavored Markdown +
+project   northem-dark-atom-syntax                                     +
+file      GitHub Flavored Markdown.less                                +
+version   0.13.0                                                       +
+author    Arctic Ice Studio                                            +
+email     development@arcticicestudio.com                              +
+website   http://arcticicestudio.com                                   +
+copyright Copyright (C) 2015-2016                                      +
+created   2015-03-15 20:17 UTC+0100                                    +
+modified  2016-01-31 16:47 UTC+0100                                    +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+[Description]
+This file defines all language specific syntax highlighting classes for GitHub Flavored Markdown.
+
+[Index]
+  (1) Comment
+  (2) Entity
+  (3) Markup
+  (4) Punctuation
+  (5) Support
+  (6) Variable
+
+[Dependencies]
+  - language-gfm@^0.82.0 (https://atom.io/packages/language-gfm) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
+
+[License]
+Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
+Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
+*/
 .source.gfm {
   color: @color-editor-text;
   -webkit-font-smoothing: auto;
-
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
   .comment {
     &.quote {
       color: @color-editor-text;
@@ -11,7 +69,19 @@
       color: @color-syntax-class;
     }
   }
+  /* +------------------------------------------------------------------------[1]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [2] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
+    color: @color-syntax-keyword;
+  }
+  /* +------------------------------------------------------------------------[2]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Markup                                                                 [3] +
+     +----------------------------------------------------------------------------+ */
   .markup {
     &.heading {
       color: @color-syntax-keyword;
@@ -41,28 +111,11 @@
       color: @color-git-diff-removed;
     }
   }
+  /* +------------------------------------------------------------------------[3]-+ */
 
-  .support {
-    color: @color-syntax-markdown-code;
-
-    &.quote {
-      color: @color-syntax-class;
-    }
-  }
-
-  .entity {
-    color: @color-syntax-keyword;
-  }
-
-  .variable {
-    &.unordered.list {
-      color: @color-syntax-class;
-    }
-    &.ordered.list {
-      color: @color-syntax-class;
-    }
-  }
-
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [4] +
+     +----------------------------------------------------------------------------+ */
   .punctation {
     &.definition {
       &.begin, &.end {
@@ -73,4 +126,30 @@
       color: @color-syntax-symbol;
     }
   }
+  /* +------------------------------------------------------------------------[4]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Support                                                                [5] +
+     +----------------------------------------------------------------------------+ */
+  .support {
+    color: @color-syntax-markdown-code;
+
+    &.quote {
+      color: @color-syntax-class;
+    }
+  }
+  /* +------------------------------------------------------------------------[5]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Variable                                                              [6] +
+     +----------------------------------------------------------------------------+ */
+  .variable {
+    &.unordered.list {
+      color: @color-syntax-class;
+    }
+    &.ordered.list {
+      color: @color-syntax-class;
+    }
+  }
+  /* +------------------------------------------------------------------------[6]-+ */
 }
