--- a/styles/languages/PropertyList.less
+++ b/styles/languages/PropertyList.less
@@ -3,49 +3,122 @@
 title     Northem Dark Atom Syntax - Language Property List +
 project   northem-dark-atom-syntax                          +
 file      PropertyList.less                                 +
-webiste   http://arcticicestudio.com/Northem                +
+version   0.13.0                                            +
 author    Arctic Ice Studio                                 +
 email     development@arcticicestudio.com                   +
-copyright Copyright (C) 2015                                +
+website   http://arcticicestudio.com                        +
+copyright Copyright (C) 2015-2016                           +
 created   2015-09-24 15:18 UTC+0200                         +
-modified  2015-12-12 20:59 UTC+0100                         +
+modified  2016-01-31 17:02 UTC+0100                         +
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for Property Lists.
 
 [Index]
-  (1) Property List (Old-Style)
-    (1.0) Default / Fallback Color
-    (1.1) Punctuation
-  (2) Git Configuration
-    (2.0) Default / Fallback Color
-    (2.1) Meta
-    (2.2) Entity
-    (2.3) Support
-    (2.4) Constant
+  (1) Comment
+  (2) Constant
+  (3) Invalid
+  (4) Meta
+  (5) Punctuation
+  (6) String
 
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  Core Packages:
-    - "language-property-list" (https://atom.io/packages/language-property-list) by "atom" (https://atom.io/users/atom)
+  - language-property-list@^0.8.0 (https://atom.io/packages/language-property-list) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
 .source.plist {
-/*+----------------------------------------------------------------------------+
-  + Property List (Old-Style) - Default / Fallback Color                 [1.0] +
-  +----------------------------------------------------------------------------+*/
   color: @color-syntax-other;
-/*+----------------------------------------------------------------------[1.0]-+*/
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
+  .comment {
+    color: @color-syntax-comment;
+  }
+  /* +------------------------------------------------------------------------[1]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + Property List (Old-Style) - Punctuation                              [1.1] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
+  .constant {
+    &.other {
+      &.key {
+        color: @color-syntax-variable;
+      }
+    }
+    &.numeric {
+      color: @color-syntax-number;
+
+      &.base64{
+        color: @color-syntax-propertylist-base64;
+        font-weight: bold;
+      }
+    }
+    &.character {
+      &.escape {
+        color: @color-syntax-escape;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[2]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Invalid                                                                [3] +
+     +----------------------------------------------------------------------------+ */
+  .invalid {
+    &.illegal {
+      &.character-not-allowed-here {
+        color: @color-syntax-propertylist-illegal;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Meta                                                                   [4] +
+     +----------------------------------------------------------------------------+ */
+  .meta {
+    &.binary-data {
+      color: @color-syntax-keyword;
+    }
+    &.scope {
+      &.dictionary-item {
+        color: @color-syntax-keyword;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[4]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [5] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
       &.dictionary {
@@ -81,53 +154,13 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
-/*+----------------------------------------------------------------------[1.1]-+*/
+  /* +------------------------------------------------------------------------[5]-+ */
 
-  .constant {
-    &.other {
-      &.key {
-        color: @color-syntax-variable;
-      }
-    }
-    &.numeric {
-      color: @color-syntax-number;
-
-      &.base64{
-        color: @color-syntax-propertylist-base64;
-        font-weight: bold;
-      }
-    }
-    &.character {
-      &.escape {
-        color: @color-syntax-escape;
-      }
-    }
-  }
-
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [6] +
+     +----------------------------------------------------------------------------+ */
   .string {
     color: @color-syntax-string;
   }
-
-  .meta {
-    &.binary-data {
-      color: @color-syntax-keyword;
-    }
-    &.scope {
-      &.dictionary-item {
-        color: @color-syntax-keyword;
-      }
-    }
-  }
-
-  .comment {
-    color: @color-syntax-comment;
-  }
-
-  .invalid {
-    &.illegal {
-      &.character-not-allowed-here {
-        color: @color-syntax-propertylist-illegal;
-      }
-    }
-  }
+  /* +------------------------------------------------------------------------[6]-+ */
 }
