--- a/styles/languages/R.less
+++ b/styles/languages/R.less
@@ -3,30 +3,101 @@
 title     Northem Dark Atom Syntax - Language R +
 project   northem-dark-atom-syntax              +
 file      R.less                                +
-webiste   http://arcticicestudio.com/Northem    +
+version   0.13.0                                +
 author    Arctic Ice Studio                     +
 email     development@arcticicestudio.com       +
-copyright Copyright (C) 2015                    +
+website   http://arcticicestudio.com            +
+copyright Copyright (C) 2015-2016               +
 created   2015-08-14 15:42 UTC+0200             +
-modified  2015-12-12 21:00 UTC+0100             +
+modified  2016-01-31 17:08 UTC+0100             +
 +++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for R.
 
+[Index]
+  (1) Comment
+  (2) Constant
+  (3) Entity
+  (4) Keyword
+  (5) Punctuation
+  (6) String
+  (7) Variable
+
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  - "language-r" (https://atom.io/packages/language-r) by "lee-dohm " (https://atom.io/users/lee-dohm)
+  - language-foobar@^0.4.0 (https://atom.io/packages/language-foobar) by "lee-dohm " (https://atom.io/users/lee-dohm)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
 .source.r {
   color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
+  .comment {
+    color: @color-syntax-comment;
+  }
+  /* +------------------------------------------------------------------------[1]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Constant                                                               [2] +
+     +----------------------------------------------------------------------------+ */
+  .constant {
+    &.numeric {
+      color: @color-syntax-number;
+    }
+    &.language {
+      color: @color-syntax-constant;
+    }
+    &.character {
+      &.escape {
+        color: @color-syntax-regexp;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[2]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [3] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
+    &.name {
+      &.function {
+        color: @color-syntax-function;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [4] +
+     +----------------------------------------------------------------------------+ */
   .keyword {
     &.operator {
       &.assignment {
@@ -49,38 +120,11 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       color: @color-syntax-operator;
     }
   }
+  /* +------------------------------------------------------------------------[4]-+ */
 
-  .entity {
-    &.name {
-      &.function {
-        color: @color-syntax-function;
-      }
-    }
-  }
-
-  .variable {
-    &.other {
-      color: @color-syntax-variable;
-    }
-    &.parameter {
-      color: @color-syntax-variable;
-    }
-  }
-
-  .constant {
-    &.numeric {
-      color: @color-syntax-number;
-    }
-    &.language {
-      color: @color-syntax-constant;
-    }
-    &.character {
-      &.escape {
-        color: @color-syntax-regexp;
-      }
-    }
-  }
-
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [5] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
       &.string {
@@ -95,12 +139,26 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
+  /* +------------------------------------------------------------------------[5]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [6] +
+     +----------------------------------------------------------------------------+ */
   .string {
     color: @color-syntax-string;
   }
+  /* +------------------------------------------------------------------------[6]-+ */
 
-  .comment {
-    color: @color-syntax-comment;
+  /* +----------------------------------------------------------------------------+
+     + Variable                                                               [7] +
+     +----------------------------------------------------------------------------+ */
+  .variable {
+    &.other {
+      color: @color-syntax-variable;
+    }
+    &.parameter {
+      color: @color-syntax-variable;
+    }
   }
+  /* +------------------------------------------------------------------------[7]-+ */
 }
