--- a/styles/languages/SASS.less
+++ b/styles/languages/SASS.less
@@ -1,5 +1,59 @@
-.source.css.scss {
+/*
+++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Sass +
+project   northem-dark-atom-syntax                 +
+file      Sass.less                                +
+version   0.13.0                                   +
+author    Arctic Ice Studio                        +
+email     development@arcticicestudio.com          +
+website   http://arcticicestudio.com               +
+copyright Copyright (C) 2015-2016                  +
+created   2015-03-15 20:17 UTC+0100                +
+modified  2016-01-31 17:12 UTC+0100                +
+++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+[Description]
+This file defines all language specific syntax highlighting classes for Sass.
+
+[Index]
+  (1) Keyword
+
+[Dependencies]
+  - language-sass@^0.45.0 (https://atom.io/packages/language-sass) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
+
+[License]
+Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
+Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
+*/
+.source.css.scss {
+  color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [1] +
+     +----------------------------------------------------------------------------+ */
   .keyword {
     &.control {
       &.at-rule {
@@ -10,4 +64,5 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[1]-+ */
 }
