--- a/styles/languages/Shell.less
+++ b/styles/languages/Shell.less
@@ -1,9 +1,100 @@
-.source.shell {
+/*
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language ShellScript +
+project   northem-dark-atom-syntax                        +
+file      Shell.less                                      +
+version   0.13.0                                          +
+author    Arctic Ice Studio                               +
+email     development@arcticicestudio.com                 +
+website   http://arcticicestudio.com                      +
+copyright Copyright (C) 2015-2016                         +
+created   2015-03-15 20:17 UTC+0100                       +
+modified  2016-01-31 17:16 UTC+0100                       +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+[Description]
+This file defines all language specific syntax highlighting classes for ShellScript.
+
+[Index]
+  (1) Comment
+  (2) Entity
+  (3) Keyword
+  (4) Punctuation
+  (5) Support
+  (6) String
+  (7) Variable
+
+[Dependencies]
+  - language-shellscript@^0.21.0 (https://atom.io/packages/language-shellscript) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
+
+[License]
+Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
+Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
+*/
+.source.shell {
+  color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
   .comment {
     color: @color-syntax-comment;
   }
+  /* +------------------------------------------------------------------------[1]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [2] +
+     +----------------------------------------------------------------------------+ */
+  .entity {
+    &.name {
+      &.function {
+        color: @color-syntax-function;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[2]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [3] +
+     +----------------------------------------------------------------------------+ */
+  .keyword {
+    &.operator {
+      &.list {
+        color: @color-syntax-operator;
+      }
+    }
+    &.control {
+      color: @color-syntax-keyword;
+    }
+  }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [4] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
     &.definition {
       &.string {
@@ -38,7 +129,24 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[4]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Support                                                                [5] +
+     +----------------------------------------------------------------------------+ */
+  .support {
+    &.function {
+      &.builtin {
+        color: @color-syntax-function;
+        font-style: italic;
+      }
+    }
+  }
+  /* +------------------------------------------------------------------------[5]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [6] +
+     +----------------------------------------------------------------------------+ */
   .string {
     &.quoted {
       &.double {
@@ -54,7 +162,11 @@
       }
     }
   }
+  /* +------------------------------------------------------------------------[6]-+ */
 
+  /* +----------------------------------------------------------------------------+
+     + Variable                                                               [7] +
+     +----------------------------------------------------------------------------+ */
   .variable {
     &.other {
       &.positional {
@@ -62,36 +174,8 @@
       }
     }
   }
-
-  .entity {
-    &.name {
-      &.function {
-        color: @color-syntax-function;
-      }
-    }
-  }
-
-  .keyword {
-    &.operator {
-      &.list {
-        color: @color-syntax-operator;
-      }
-    }
-    &.control {
-      color: @color-syntax-keyword;
-    }
-  }
-
   .variable {
     color: @color-syntax-variable;
   }
-
-  .support {
-    &.function {
-      &.builtin {
-        color: @color-syntax-function;
-        font-style: italic;
-      }
-    }
-  }
+  /* +------------------------------------------------------------------------[7]-+ */
 }
