--- a/styles/languages/XML.less
+++ b/styles/languages/XML.less
@@ -3,68 +3,72 @@
 title     Northem Dark Atom Syntax - Language XML +
 project   northem-dark-atom-syntax                +
 file      XML.less                                +
-webiste   http://arcticicestudio.com/Northem      +
+version   0.13.0                                  +
 author    Arctic Ice Studio                       +
 email     development@arcticicestudio.com         +
-copyright Copyright (C) 2015                      +
+website   http://arcticicestudio.com              +
+copyright Copyright (C) 2015-2016                 +
 created   2015-03-19 08:14 UTC+0200               +
-modified  2015-12-12 21:01 UTC+0100               +
+modified  2016-01-31 17:22 UTC+0100               +
 +++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all language specific syntax highlighting classes for XML.
 
 [Index]
-  (1) XML+PropertyList XML
-    (1.0) Default / Fallback Color
-    (1.1) Punctuation
-    (1.2) Entity
-    (1.3) Text
-    (1.4) Comment
-    (1.5) String
+  (1) Comment
+  (2) Entity
+  (3) Punctuation
+  (4) String
+  (5) Text
 
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  Core Packages:
-    - "language-xml" (https://atom.io/packages/language-xml) by "atom" (https://atom.io/users/atom)
+  - language-xml@^0.34.2 (https://atom.io/packages/language-xml) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
 .text.xml,
 .text.xml.plist {
-/*+----------------------------------------------------------------------------+
-  + XML+PropertyList XML - Default / Fallback Color                      [1.0] +
-  +----------------------------------------------------------------------------+*/
   color: @color-syntax-other;
-/*+----------------------------------------------------------------------[1.0]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + XML+PropertyList XML - Punctuation                                   [1.1] +
-  +----------------------------------------------------------------------------+*/
-  .punctuation {
-    &.definition {
-      &.tag {
-        color: @color-syntax-xml-tag;
-      }
-      &.string {
-        &.begin, &.end {
-          color: @color-syntax-symbol;
-        }
-      }
-      &.comment {
-        color: @color-syntax-comment;
-      }
+  /* +----------------------------------------------------------------------------+
+     + Comment                                                                [1] +
+     +----------------------------------------------------------------------------+ */
+  .comment {
+    &.block {
+      color: @color-syntax-comment;
     }
   }
-/*+----------------------------------------------------------------------[1.1]-+*/
+  /* +------------------------------------------------------------------------[1]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + XML+PropertyList XML - Entity                                        [1.2] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + Enity                                                                  [2] +
+     +----------------------------------------------------------------------------+ */
   .entity {
     &.name.tag {
       color: @color-syntax-doctype;
@@ -81,29 +85,31 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
-/*+----------------------------------------------------------------------[1.2]-+*/
+  /* +------------------------------------------------------------------------[2]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + XML+PropertyList XML - Text                                          [1.3] +
-  +----------------------------------------------------------------------------+*/
-  .text {
-    color: @color-editor-text;
-  }
-/*+----------------------------------------------------------------------[1.3]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + XML+PropertyList XML - Comment                                       [1.4] +
-  +----------------------------------------------------------------------------+*/
-  .comment {
-    &.block {
-      color: @color-syntax-comment;
+  /* +----------------------------------------------------------------------------+
+     + Punctuation                                                            [3] +
+     +----------------------------------------------------------------------------+ */
+  .punctuation {
+    &.definition {
+      &.tag {
+        color: @color-syntax-xml-tag;
+      }
+      &.string {
+        &.begin, &.end {
+          color: @color-syntax-symbol;
+        }
+      }
+      &.comment {
+        color: @color-syntax-comment;
+      }
     }
   }
-/*+----------------------------------------------------------------------[1.4]-+*/
+  /* +------------------------------------------------------------------------[3]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + XML+PropertyList XML - String                                        [1.5] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [4] +
+     +----------------------------------------------------------------------------+ */
   .string {
     &.quoted {
       &.double {
@@ -116,5 +122,13 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       }
     }
   }
-/*+----------------------------------------------------------------------[1.5]-+*/
+  /* +------------------------------------------------------------------------[4]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Text                                                                   [5] +
+     +----------------------------------------------------------------------------+ */
+  .text {
+    color: @color-editor-text;
+  }
+  /* +------------------------------------------------------------------------[5]-+ */
 }
