--- a/styles/languages/git.less
+++ b/styles/languages/git.less
@@ -1,210 +1,201 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Language git +
-project   northem-dark-atom-syntax                +
-file      git.less                                +
-webiste   http://arcticicestudio.com/Northem      +
-author    Arctic Ice Studio                       +
-email     development@arcticicestudio.com         +
-copyright Copyright (C) 2015                      +
-created   2015-09-23 12:19 UTC+0200               +
-modified  2015-12-12 20:55 UTC+0100               +
-+++++++++++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem DarkAtom Syntax - Language Git +
+project   northem-darkatom-syntax                +
+file      git.less                               +
+version   0.13.0                                 +
+author    Arctic Ice Studio                      +
+email     development@arcticicestudio.com        +
+website   http://arcticicestudio.com             +
+copyright Copyright (C) 2015-2016                +
+created   2015-09-23 12:19 UTC+0200              +
+modified  2016-01-31 11:43 UTC+0100              +
+++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines basic syntax highlighting for all git specifc classes.
-Actually supports:
-  * Git Commit Messages ("COMMIT_EDITMSG","MERGE_MSG")
-  * Git Configuration (".gitconfig",".gitmodules",".git/config","/etc/gitconfig")
-  * Git Rebase Messages ("git-rebase-todo")
+This file defines basic syntax highlighting for all Git specifc classes which acually includes
+  1. Git Commit Messages
+    - "COMMIT_EDITMSG"
+    - "MERGE_MSG"
+  2. Git Configurations
+    - ".gitconfig"
+    - ".gitmodules"
+    - ".git/config"
+    - "/etc/gitconfig"
+  3. Git Rebase Messages
+  - "git-rebase-todo"
 
 [Index]
   (1) Git Commit Message
-    (1.0) Default / Fallback Color
-    (1.1) Meta
-  (2) Git Configuration
-    (2.0) Default / Fallback Color
-    (2.1) Meta
+    (1.0) Meta
+  (2) Git Configurations
+    (2.0) Comment
+    (2.1) Constant
     (2.2) Entity
-    (2.3) Support
-    (2.4) Constant
-    (2.5) Punctuation
-    (2.6) Comment
+    (2.3) Meta
+    (2.4) Punctuation
+    (2.5) Support
   (3) Git Rebase Message
-    (3.0) Default / Fallback Color
-    (3.1) Support
+    (3.0) Comment
     (3.2) Constant
-    (3.3) Meta
-    (3.4) Punctuation
-    (3.5) Comment
+    (3.2) Meta
+    (3.3) Punctuation
+    (3.4) Support
 
 [Dependencies]
-Syntax Highlighting based on the following packages:
-  Core Packages:
-    - "language-git" (https://atom.io/packages/language-git) by "atom" (https://atom.io/users/atom)
+  - language-git@^0.11.0 (https://atom.io/packages/language-git) by "atom" (https://atom.io/users/atom)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
-.text.git-commit {
-/*+----------------------------------------------------------------------------+
-  + Git Commit Message - Default / Fallback Color                        [1.0] +
-  +----------------------------------------------------------------------------+*/
+/* +----------------------------------------------------------------------------+
+   + Git Commit Message                                                     [1] +
+   +----------------------------------------------------------------------------+ */
+.text.git-commit  {
   color: @color-syntax-other;
-/*+----------------------------------------------------------------------[1.0]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Git Commit Message - Meta                                            [1.1] +
-  +----------------------------------------------------------------------------+*/
-  .meta {
-    &.scope {
-      &.message {
-        color: @color-syntax-string;
-      }
-    }
+  /* +----------------------------------------------------------------------------+
+     + Git Commit Message - Meta                                            [1.0] +
+     +----------------------------------------------------------------------------+ */
+  .meta.scope.message {
+    color: @color-syntax-string;
   }
-/*+----------------------------------------------------------------------[1.1]-+*/
+  /* +----------------------------------------------------------------------[1.0]-+ */
 }
+/* +------------------------------------------------------------------------[1]-+ */
 
+/* +----------------------------------------------------------------------------+
+   + Git Configurations                                                     [2] +
+   +----------------------------------------------------------------------------+ */
 .source.git-config {
-/*+----------------------------------------------------------------------------+
-  + Git Configuration - Default / Fallback Color                         [2.0] +
-  +----------------------------------------------------------------------------+*/
   color: @color-syntax-other;
-/*+----------------------------------------------------------------------[2.0]-+*/
+  /* +----------------------------------------------------------------------------+
+     + Git Configurations - Comment                                         [2.0] +
+     +----------------------------------------------------------------------------+ */
+  .comment {
+    color: @color-syntax-comment;
+  }
+  /* +----------------------------------------------------------------------[2.0]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + Git Configuration - Meta                                             [2.1] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + Git Configurations - Constant                                        [2.1] +
+     +----------------------------------------------------------------------------+ */
+  .constant.language.boolean {
+    color: @color-syntax-keyword;
+  }
+  /* +----------------------------------------------------------------------[2.1]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Git Configurations - Enity                                           [2.2] +
+     +----------------------------------------------------------------------------+ */
+  .entity.name.section {
+    color: @color-syntax-git-config-section;
+  }
+  /* +----------------------------------------------------------------------[2.2]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Git Configurations - Meta                                            [2.3] +
+     +----------------------------------------------------------------------------+ */
   .meta {
     &.section {
       color: @color-syntax-git-config-section;
     }
-    &.value-pair {
-      &.section-item {
-        color: @color-syntax-string;
-      }
-    }
-  }
-/*+----------------------------------------------------------------------[2.1]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Git Configuration - Entity                                           [2.2] +
-  +----------------------------------------------------------------------------+*/
-  .entity {
-    &.name {
-      &.section {
-        color: @color-syntax-git-config-section;
-      }
-    }
-  }
-/*+----------------------------------------------------------------------[2.2]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Git Configuration - Support                                          [2.3] +
-  +----------------------------------------------------------------------------+*/
-  .support {
-    &.constant {
-      color: @color-syntax-attribute;
-    }
-  }
-/*+----------------------------------------------------------------------[2.3]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Git Configuration - Constant                                         [2.4] +
-  +----------------------------------------------------------------------------+*/
-  .constant {
-    &.language {
-      &.boolean {
-        color: @color-syntax-keyword;
-      }
-    }
-  }
-/*+----------------------------------------------------------------------[2.4]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Git Configuration - Punctuation                                      [2.5] +
-  +----------------------------------------------------------------------------+*/
-  .punctuation {
-    &.definition {
-      &.comment {
-        color: @color-syntax-comment;
-      }
-    }
-    &.separator {
-      &.key-value {
-        color: @color-syntax-operator;
-      }
-    }
-  }
-/*+----------------------------------------------------------------------[2.5]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Git Configuration - Comment                                          [2.6] +
-  +----------------------------------------------------------------------------+*/
-  .comment {
-    color: @color-syntax-comment;
-  }
-/*+----------------------------------------------------------------------[2.6]-+*/
-}
-
-.text.git-rebase {
-/*+----------------------------------------------------------------------------+
-  + Git Rebase Message - Default / Fallback Color                        [3.0] +
-  +----------------------------------------------------------------------------+*/
-  color: @color-syntax-other;
-/*+----------------------------------------------------------------------[3.0]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Git Rebase Message - Support                                         [3.1] +
-  +----------------------------------------------------------------------------+*/
-  .support {
-    &.function {
-      color: @color-syntax-function;
-    }
-  }
-/*+----------------------------------------------------------------------[3.1]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Git Rebase Message - Constant                                        [3.2] +
-  +----------------------------------------------------------------------------+*/
-  .constant {
-    &.sha {
-      color: @color-syntax-git-rebase-sha;
-    }
-  }
-/*+----------------------------------------------------------------------[3.2]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Git Rebase Message - Meta                                            [3.3] +
-  +----------------------------------------------------------------------------+*/
-  .meta {
-    &.commit-message {
+    &.value-pair.section-item {
       color: @color-syntax-string;
     }
   }
-/*+----------------------------------------------------------------------[3.3]-+*/
+  /* +----------------------------------------------------------------------[2.3]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + Git Rebase Message - Punctuation                                     [3.4] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + Git Configurations - Punctuation                                     [2.4] +
+     +----------------------------------------------------------------------------+ */
   .punctuation {
-    &.definition {
-      &.comment {
-        color: @color-syntax-comment;
-      }
+    &.definition.comment {
+      color: @color-syntax-comment;
+    }
+    &.separator.key-value {
+      color: @color-syntax-operator;
     }
   }
-/*+----------------------------------------------------------------------[3.4]-+*/
+  /* +----------------------------------------------------------------------[2.4]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + Git Rebase Message - Comment                                         [3.5] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + Git Configurations - Support                                         [2.5] +
+     +----------------------------------------------------------------------------+ */
+  .support.constant {
+    color: @color-syntax-attribute;
+  }
+  /* +----------------------------------------------------------------------[2.5]-+ */
+}
+/* +------------------------------------------------------------------------[2]-+ */
+
+/* +----------------------------------------------------------------------------+
+   + Git Rebase Messages                                                    [3] +
+   +----------------------------------------------------------------------------+ */
+.text.git-rebase {
+  color: @color-syntax-other;
+  /* +----------------------------------------------------------------------------+
+     + Git Rebase Messages - Comment                                        [3.0] +
+     +----------------------------------------------------------------------------+ */
   .comment {
     color: @color-syntax-comment;
   }
-/*+----------------------------------------------------------------------[3.5]-+*/
+  /* +----------------------------------------------------------------------[3.0]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Git Rebase Messages - Constant                                       [3.1] +
+     +----------------------------------------------------------------------------+ */
+  .constant.sha {
+    color: @color-syntax-git-rebase-sha;
+  }
+  /* +----------------------------------------------------------------------[3.1]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Git Rebase Messages - Meta                                           [3.2] +
+     +----------------------------------------------------------------------------+ */
+  .meta.commit-message {
+    color: @color-syntax-string;
+  }
+  /* +----------------------------------------------------------------------[3.2]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Git Rebase Messages - Punctuation                                    [3.3] +
+     +----------------------------------------------------------------------------+ */
+  .punctuation.definition.comment {
+    color: @color-syntax-comment;
+  }
+  /* +----------------------------------------------------------------------[3.3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Git Rebase Messages - Support                                        [3.4] +
+     +----------------------------------------------------------------------------+ */
+  .support.function {
+    color: @color-syntax-function;
+  }
+  /* +----------------------------------------------------------------------[3.4]-+ */
 }
+/* +------------------------------------------------------------------------[3]-+ */
