--- a/styles/packagesupport.less
+++ b/styles/packagesupport.less
@@ -3,53 +3,75 @@
 title     Northem Dark Atom Syntax - Package Support +
 project   northem-dark-atom-syntax                   +
 file      packagesupport.less                        +
-webiste   http://arcticicestudio.com/Northem         +
+version   0.13.0                                     +
 author    Arctic Ice Studio                          +
 email     development@arcticicestudio.com            +
-copyright Copyright (C) 2015                         +
+website   http://arcticicestudio.com                 +
+copyright Copyright (C) 2015-2016                    +
 created   2015-03-17 14:36 UTC+0100                  +
-modified  2015-12-12 20:49 UTC+0100                  +
+modified  2016-01-31 17:42 UTC+0100                  +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines package specific styles based on the matching custom classes.
 
 [Index]
-  (1.0) bracket-matcher
-  (2.0) color-picker
-  (3.0) hightlight-selected
+  (1) bracket-matcher
+  (2) color-picker
+  (3) hightlight-selected
   (4) markdown-preview
-    (4.0) editor
-    (4.1) blockquote
-    (4.2) code
-  (5.0) minimap-highlight-selected
+    (4.0) Atom Editor
+    (4.1) Blockquote
+    (4.2) Code
+  (5) minimap-highlight-selected
 
 [Packages]
-Actually supporting:
-  * bracket-matcher @ ^0.76.0            (https://atom.io/packages/bracket-matcher)
-  * color-picker @ ^2.0.12               (https://atom.io/packages/color-picker)
-  * hightlight-selected @ ^0.10.1        (https://atom.io/packages/highlight-selected)
-  * markdown-preview @ ^0.150.0          (https://atom.io/packages/markdown-preview)
-  * minimap-highlight-selected @ ^4.3.1  (https://atom.io/packages/minimap-highlight-selected)
+  - bracket-matcher@^0.79.0            (https://atom.io/packages/bracket-matcher)
+  - color-picker@^2.1.0                (https://atom.io/packages/color-picker)
+  - highlight-selected@^0.11.0         (https://atom.io/packages/highlight-selected)
+  - markdown-preview@^0.157.0          (https://atom.io/packages/markdown-preview)
+  - minimap-highlight-selected@^4.3.1  (https://atom.io/packages/minimap-highlight-selected)
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
-/*+----------------------------------------------------------------------------+
-  + bracket-matcher                                                      [1.0] +
-  +----------------------------------------------------------------------------+*/
+/* +----------------------------------------------------------------------------+
+   + bracket-matcher                                                        [1] +
+   +----------------------------------------------------------------------------+ */
 .bracket-matcher.region {
   border-bottom: @size-packagesupport-bracket-matcher-border-bottom solid @color-marker-result-border;
   border-radius: @size-packagesupport-bracket-matcher-border-radius;
 }
-/*+----------------------------------------------------------------------[1.0]-+*/
+/* +------------------------------------------------------------------------[1]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + color-picker                                                         [2.0] +
-  +----------------------------------------------------------------------------+*/
+/* +----------------------------------------------------------------------------+
+   + color-picker                                                           [2] +
+   +----------------------------------------------------------------------------+ */
 .ColorPicker {
   .ColorPicker-body {
     background-color: @color-packagesupport-color-picker-background;
@@ -73,39 +95,39 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
     }
   }
 }
-/*+----------------------------------------------------------------------[2.0]-+*/
+/* +------------------------------------------------------------------------[2]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + hightlight-selected                                                  [3.0] +
-  +----------------------------------------------------------------------------+*/
+/* +----------------------------------------------------------------------------+
+   + hightlight-selected                                                    [3] +
+   +----------------------------------------------------------------------------+ */
 .highlight-selected .region {
   border-color: @color-marker-result-border !important;
 }
-/*+----------------------------------------------------------------------[3.0]-+*/
+/* +------------------------------------------------------------------------[3]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + markdown-preview                                                       [4] +
-  +----------------------------------------------------------------------------+*/
+/* +----------------------------------------------------------------------------+
+   + markdown-preview                                                       [4] +
+   +----------------------------------------------------------------------------+ */
 .markdown-preview {
-/*+----------------------------------------------------------------------------+
-  + markdown-preview - editor                                            [4.0] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + markdown-preview - Atom Editor                                       [4.0] +
+     +----------------------------------------------------------------------------+ */
   atom-text-editor {
     background-color: @color-editor-background;
   }
-/*+----------------------------------------------------------------------[4.0]-+*/
+  /* +----------------------------------------------------------------------[4.0]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + markdown-preview - blockquote                                        [4.1] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + markdown-preview - Blockquote                                        [4.1] +
+     +----------------------------------------------------------------------------+ */
   blockquote {
     border-left-color: @color-packagesupport-markdown-preview-blockquote-border;
   }
-/*+----------------------------------------------------------------------[4.1]-+*/
+  /* +----------------------------------------------------------------------[4.1]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + markdown-preview - code                                              [4.2] +
-  +----------------------------------------------------------------------------+*/
+  /* +----------------------------------------------------------------------------+
+     + markdown-preview - Code                                              [4.2] +
+     +----------------------------------------------------------------------------+ */
   code {
     color: @color-packagesupport-markdown-preview-code;
 
@@ -113,14 +135,14 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
       background-color: @color-packagesupport-markdown-preview-code-hover;
     }
   }
-/*+----------------------------------------------------------------------[4.2]-+*/
+  /* +----------------------------------------------------------------------[4.2]-+ */
 }
-/*+------------------------------------------------------------------------[4]-+*/
+/* +------------------------------------------------------------------------[4]-+ */
 
-/*+----------------------------------------------------------------------------+
-  + minimap-highlight-selected                                           [5.0] +
-  +----------------------------------------------------------------------------+*/
+/* +----------------------------------------------------------------------------+
+   + minimap-highlight-selected                                             [5] +
+   +----------------------------------------------------------------------------+ */
 .minimap .highlight-selected {
   background: @color-marker-result-border;
 }
-/*+----------------------------------------------------------------------[5.0]-+*/
+/* +------------------------------------------------------------------------[5]-+ */
