--- a/styles/sizes.less
+++ b/styles/sizes.less
@@ -1,15 +1,16 @@
 /*
-++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Sizes   +
-project   northem-dark-atom-syntax           +
-file      sizes.less                         +
-webiste   http://arcticicestudio.com/Northem +
-author    Arctic Ice Studio                  +
-email     development@arcticicestudio.com    +
-copyright Copyright (C) 2015                 +
-created   2015-09-27 18:19 UTC+0100          +
-modified  2015-12-12 20:48 UTC+0100          +
-++++++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Sizes +
+project   northem-dark-atom-syntax         +
+file      sizes.less                       +
+version   0.13.0                           +
+author    Arctic Ice Studio                +
+email     development@arcticicestudio.com  +
+website   http://arcticicestudio.com       +
+copyright Copyright (C) 2015-2016          +
+created   2015-09-27 18:19 UTC+0200        +
+modified  2016-01-31 17:44 UTC+0100        +
+++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all syntax specific size variables.
@@ -18,39 +19,60 @@ This file defines all syntax specific size variables.
   (1) Base
     (1.0) Text
   (2) Package Support
-    (2.0) color-picker
-    (2.1)
+    (2.0) bracket-matcher
+    (2.1) color-picker
+
+[Copyright]
+Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
-Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
-
 Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
 Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+[References]
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
-/*+----------------------------------------------------------------------------+
-  + Base                                                                   [1] +
-  +----------------------------------------------------------------------------+*/
-/*+----------------------------------------------------------------------------+
-  + Base - Text                                                          [1.0] +
-  +----------------------------------------------------------------------------+*/
+/* +----------------------------------------------------------------------------+
+   + Base                                                                   [1] +
+   +----------------------------------------------------------------------------+ */
+/* +----------------------------------------------------------------------------+
+   + Base - Text                                                          [1.0] +
+   +----------------------------------------------------------------------------+ */
 @size-base-text: 1em;
-/*+----------------------------------------------------------------------[1.0]-+*/
-/*+------------------------------------------------------------------------[1]-+*/
+/* +----------------------------------------------------------------------[1.0]-+ */
+/* +------------------------------------------------------------------------[1]-+ */
 
-
-/*+----------------------------------------------------------------------------+
-  + Package Support                                                        [2] +
-  +----------------------------------------------------------------------------+*/
-/*+----------------------------------------------------------------------------+
-  + Package Support - color-picker                                       [2.0] +
-  +----------------------------------------------------------------------------+*/
-@size-packagesupport-color-picker-color-font:  @size-base-text*1.5;
-/*+----------------------------------------------------------------------[2.0]-+*/
-
-/*+----------------------------------------------------------------------------+
-  + Package Support - bracket-matcher                                    [2.1] +
-  +----------------------------------------------------------------------------+*/
+/* +----------------------------------------------------------------------------+
+   + Package Support                                                        [2] +
+   +----------------------------------------------------------------------------+ */
+/* +----------------------------------------------------------------------------+
+   + Package Support - bracket-matcher                                    [2.0] +
+   +----------------------------------------------------------------------------+ */
 @size-packagesupport-bracket-matcher-border-bottom: 2px;
 @size-packagesupport-bracket-matcher-border-radius: 1px;
-/*+----------------------------------------------------------------------[2.1]-+*/
-/*+------------------------------------------------------------------------[2]-+*/
+/* +----------------------------------------------------------------------[2.0]-+ */
+
+/* +----------------------------------------------------------------------------+
+   + Package Support - color-picker                                       [2.1] +
+   +----------------------------------------------------------------------------+ */
+@size-packagesupport-color-picker-color-font: @size-base-text*1.5;
+/* +----------------------------------------------------------------------[2.1]-+ */
+/* +------------------------------------------------------------------------[2]-+ */
